syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

message Order {
  string productId = 1;
  int64 quantity = 2;
}

// The greeting service definition.
service OrderService {
  // Sends a greeting
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
}

message GetOrdersRequest {}

message GetOrdersResponse {
  repeated Order orders = 1;
}